# youtube-talker

./: .env.example  .gitignore  CLAUDE.md  MAIN_ERRORS.md  PRODUCTION_NOTES.md  QUICKSTART.md  README.md  dev.sh  docker-compose.yml  health-check.sh  stop.sh
backend/: .env.example  .gitignore  PHASE2_TESTING_SUMMARY.md  README.md  alembic.ini  pyproject.toml  test_e2e_conversations.py  test_router.py
backend/PROJECT_FLOW_DOCS/stages/: CHANNELS_FEATURE_PLAN.md
backend/alembic/: env.py
backend/alembic/versions/: 1a95e025e49d_add_user_role_and_transcript_count.py  1befb8317517_add_channel_tables_and_modify_messages_.py  272a03552c78_add_model_column_to_conversations.py  2b4a2190f4a6_fix_change_youtube_video_id_unique_.py  4c2e2e27e7d0_make_user_id_nullable_in_chunks.py  4e67c9eefea6_add_model_pricing_table_for_cost_.py  9660aa8618fd_remove_template_type_constraint_for_mvp_.py  aa2f19886ae7_add_transcript_count_check_constraint.py  ccbac5e5315e_add_model_field_to_channel_conversations.py  cd7cc3eddba3_make_conversation_id_nullable.py  fcd6e385eb69_initial_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: errors.py  exception_handlers.py  logging.py  middleware.py  security.py
backend/app/db/: models.py  session.py
backend/app/schemas/: admin.py  auth.py  channel.py  channel_public.py  conversation.py  llm_responses.py  transcript.py
backend/app/services/: admin_service.py  auth_service.py  channel_service.py  chunking_service.py  config_service.py  embedding_service.py  qdrant_service.py  transcript_service.py
backend/app/utils/: url_detector.py
backend/docs/: INTEGRATION_TESTING_LESSONS.md  MANUAL_TEST_CHECKLIST.md  SECURITY_REVIEW.md  SECURITY_REVIEW_FINAL.md  supadata.md
backend/scripts/: cleanup_test_users.py  reindex_user_videos.py  reset_admin_password.py  seed_config.py  seed_database.py  seed_pricing.py  setup_qdrant.py  test_e2e_manual.py  test_vector_services.py  verify_frontend_prerequisites.sh
backend/tests/: conftest.py
backend/tests/e2e/: test_user_journey.py
backend/tests/integration/: test_admin_users.py  test_auth_endpoints.py  test_qdrant_service.py  test_rag_flows.py  test_transcript_ingestion.py  test_websocket_basic.py
backend/tests/unit/: test_auth_service.py  test_channel_conversation_repo.py  test_channel_public_schemas.py  test_channel_repo.py  test_channel_schemas.py  test_channel_video_repo.py  test_chitchat_flow.py  test_chunk_repo.py  test_chunking_service.py  test_config.py  test_config_repo.py  test_config_service.py  (+32 more)
(+165 files in other folders)
